[MDS-1213] Ensure Mine List Information is Always Visible

--- a/frontend/src/styles/elements/elements.scss
+++ b/frontend/src/styles/elements/elements.scss
@@ -117,7 +117,6 @@ table {
 
   table td {
     display: block;
-    text-align: right;
   }
 
   table td::before {
