--- a/frontend/src/styles/settings/variables.scss
+++ b/frontend/src/styles/settings/variables.scss
@@ -27,7 +27,7 @@ $ok-green: #45a766;
 
 // Map Markers
 $map-fuschia: #f736fb;
-$beacon-fuschia: #f736fb99;
+$beacon-fuschia: #f736fb;
 $map-lavender: #b7a6fc;
 
 /*
